fix: picture is too small

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -495,7 +495,7 @@ a.product__text {
   }
 
   .product__media-item {
-    max-height: 60vh;
+    max-height: 65vh;
     overflow: hidden;
   }
 
